dh-python (3.20180310) UNRELEASED; urgency=medium

  [ Ondřej Nový ]
  * When depends on python{3,}-pbr, set PBR_VERSION to upstream version

  [ Dirk Thomas ]
  * Use relative install-scripts path in pybuild's distutils build system

  [ Piotr Ożarowski ]
  * pybuild:
    * copy files listed in debian/pybuild.testfiles to build directory before
      test step and remove them before install step
    * improve support for building multiple (Python) distributions at once
      (PYBUILD_NAME=foo dh $@ -Spybuild --sourcedirectory=dir1;
       PYBUILD_NAME=bar dh $@ -Spybuild --sourcedirectory=dir2)
    * add --print option to print pybuild's internal parameters
      (example: `pybuild --print build_dir --interpreter python3`)
    * add --ext-sub-pattern and --ext-sub-repl options (can be used f.e. to
      move some files from dist-packages to private directory)
    * if --name contains underscore, replace it with dash in suggested package
      names
    * try a bit harder to guess (if not explicitly requested) interpreter
      versions to build for, especially if versioned interpreter was requested

    WARNING: pybuild's internal dir names were changed, use --print if you
    really have to use these paths in debian/rules

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 09 Mar 2018 00:45:36 +0100

dh-python (2.20170125) unstable; urgency=medium

  * pybuild.pm:
    - enable --test-{nose,pytest,tox} if appropriate pypy-* build
      dependency is set
  * pybuild: set _PYTHON_HOST_PLATFORM in the environment to ensure debugging
    symbols (reproducible builds effort). Thanks to Chris Lamb for the patch
    (closes: 835805)
  * dh_python{2,3} manpage: remove "s" suffix from *-section options
    to match the actual option name and --help output (closes: 847304)
  * dh_python{2,3}:
    - do not drop "module" from extension name if the name is "module",
      i.e. without prefix (closes: 841148)
    - add --accept-upstream-versions option. Thanks to Malte Forkel for the